objects/ccrz__E_Invoice__c.object
<CustomObject>
    <description>Invoice main object.  The invoice represents object against which payments may be made.</description>
    <fields>
        <fullName>ccrz__BillAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Billing address for the invoice.</description>
        <label>Bill Address</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipLabel>CC Billing Invoices</relationshipLabel>
        <relationshipName>CCBillingInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__BillTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account used for billing. Typically will be the same as Sold To Account.</description>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Billing Invoices</relationshipLabel>
        <relationshipName>CCBillingInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CCOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order to which this invoice applies (optional).</description>
        <label>CC Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>CC Invoices</relationshipLabel>
        <relationshipName>CCInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Comments__c</fullName>
        <description>Invoice comments. Typically set at create time.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CC Invoices</relationshipLabel>
        <relationshipName>CCInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CurrencyCode__c</fullName>
        <description>B2B Commerce currency code.</description>
        <label>Currency Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__DateDue__c</fullName>
        <description>The date the invoice is due.</description>
        <label>Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__DateIssued__c</fullName>
        <description>The date the invoice was issued.</description>
        <label>Date Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__InvoiceId__c</fullName>
        <description>Unique external identifier.</description>
        <externalId>true</externalId>
        <label>Invoice Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__OriginalAmount__c</fullName>
        <description>The original amount of the invoice. Once set this should not be changed. Could be negative or positive.</description>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__PaidAmount__c</fullName>
        <formula>ccrz__OriginalAmount__c - ccrz__RemainingAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to summary parent invoice.</description>
        <label>Parent Invoice</label>
        <referenceTo>ccrz__E_Invoice__c</referenceTo>
        <relationshipLabel>Child Invoices</relationshipLabel>
        <relationshipName>ChildInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__RemainingAmount__c</fullName>
        <description>The remaining amount of the invoice. As payments are applied this number will typically reduce (or increase for credits as they are applied to the customer account).</description>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__SoldAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Sold To address for the invoice.</description>
        <label>Sold Address</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipLabel>CC Sold Invoices</relationshipLabel>
        <relationshipName>CCSoldInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SoldTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Sold To Account to which this invoice applies.</description>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Invoices</relationshipLabel>
        <relationshipName>CCInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Status__c</fullName>
        <description>The current implementation defined status of the invoice. E.g. Open, Closed.</description>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>The storefront associated with this invoice.</description>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Terms__c</fullName>
        <description>The payment terms of the invoice, e.g. Net 15.</description>
        <label>Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Type__c</fullName>
        <description>E.g. Credit Note, Debit Note, etc.</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User reference</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CCInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CC Invoice</label>
    <nameField>
        <displayFormat>I-{0000000000}</displayFormat>
        <label>CC Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>